feat: added a link to the spaghetti.html from index.html. Added a home link in spaghetti.html to index.html. Added body info to recipe.html including description, ingredients, and steps headers as well as an ingredients unordered list, and a steps ordered list.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/spaghetti.html">Spaghetti</a>
+    <ul>
+        <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
+    </ul>
 </body>
 </html>
