--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -6,6 +6,35 @@
     <title>Recipes</title>
 </head>
 <body>
+    <ul>
+        <li><a href="../index.html">Home</a></li>
+    </ul>
     <h1>Spaghetti</h1>
+    <img src="../images/spaghetti.jpg" alt="A picture of a bowl of spaghetti" height="500">
+    <h2>Description</h2>
+    <p>There's nothing like classic spaghetti and meat sauce to bring people together around the dinner table. 
+        This homemade spaghetti sauce with ground beef recipe will satisfy all your comfort food cravings.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li><p>1 pound ground beef</li>
+        <li><p>1 medium onion, chopped</p></li>
+        <li><p>4 cloves garlic, minced</p></li>
+        <li><p>1 small green bell pepper, diced</p></li>
+        <li><p>1 (28 ounce) can diced tomatoes</p></li>
+        <li><p>1 (16 ounce) can tomato sauce</p></li>
+        <li><p>1 (6 ounce) can tomato paste</p></li>
+        <li><p>2 teaspoons dried oregano</p></li>
+        <li><p>2 teaspoons dried basil</p></li>
+        <li><p>1 teaspoon salt</p></li>
+        <li><p>½ teaspoon ground black pepper</p></li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li><p>Gather all ingredients.</p></li>
+        <li><p>Combine ground beef, onion, garlic, and green pepper in a large saucepan over medium-high heat. 
+            Cook and stir until meat is browned and crumbly and vegetables are tender, 5 to 7 minutes. Drain grease.</p></li>
+        <li><p>Stir diced tomatoes, tomato sauce, and tomato paste into the pan. Season with oregano, basil, salt, and pepper. Simmer spaghetti sauce for 1 hour, stirring occasionally.</p></li>
+        <li><p>Serve hot and enjoy!</p></li>
+    </ol>
 </body>
 </html>
