feat: filled out all elements of the recipe page.

--- a/recipes/chicago-style-hotdog.html
+++ b/recipes/chicago-style-hotdog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe Title</title>
+    <title>Chicago Style Hot Dog</title>
 </head>
 <body>
     <ul>
@@ -16,13 +16,29 @@
         And whatever you do, don't spoil the splendor of this Chicago dog with ketchup!</p>
     <h2>Ingredients</h2>
     <ul>
-        <li><p>List Ingredients here.</p></li>
+        <li><p>1 all-beef hot dog</p></li>
+        <li><p>1 poppy seed hot dog bun</p></li>
+        <li><p>1 tablespoon yellow mustard</p></li>
+        <li><p>1 tablespoon sweet green pickle relish</p></li>
+        <li><p>1 tablespoon chopped onion</p></li>
+        <li><p>2 tomato wedges</p></li>
+        <li><p>1 dill pickle spear</p></li>
+        <li><p></p>2 sport peppers</li>
+        <li><p>1 dash celery salt</p></li>
         
         
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li><p>List the recipe steps here.</p></li>
+        <li><p>ring a pot of water to a boil over high heat. 
+            Reduce heat to low, place hot dog in water, and cook until warmed through, about 5 minutes. 
+            Remove hot dog from water and set aside.</p></li>
+        <li><p>Place a steamer basket into the pot and steam poppy seed bun until warm, about 2 minutes.</p></li>
+        <li><p>Place hot dog in steamed bun. 
+            Pile on toppings in this order: mustard, relish, onion, tomato, pickle, peppers, and celery salt. 
+            The tomato wedges should be nestled between hot dog and top of bun on one side. 
+            Place pickle between hot dog and bottom of bun on the other side. 
+            Don't even think about ketchup!</p></li>
     </ol>
 </body>
 </html>
