feat: added links to the new recipe pages in the unordered list.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
+        <li><a href="./recipes/chicago-style-hotdog.html">Chicago Style Hotdog</a></li>
+        <li><a href="./recipes/template.html">Template</a></li>
     </ul>
 </body>
 </html>
