fix: typo in first step in the Steps ordered list. Replaced ring with Bring.

--- a/recipes/chicago-style-hotdog.html
+++ b/recipes/chicago-style-hotdog.html
@@ -30,7 +30,7 @@
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li><p>ring a pot of water to a boil over high heat. 
+        <li><p>Bring a pot of water to a boil over high heat. 
             Reduce heat to low, place hot dog in water, and cook until warmed through, about 5 minutes. 
             Remove hot dog from water and set aside.</p></li>
         <li><p>Place a steamer basket into the pot and steam poppy seed bun until warm, about 2 minutes.</p></li>
