fix: changed the title header to template from spaghetti.

--- a/recipes/template.html
+++ b/recipes/template.html
@@ -9,7 +9,7 @@
     <ul>
         <li><a href="../index.html">Home</a></li>
     </ul>
-    <h1>Spaghetti</h1>
+    <h1>Template</h1>
     <img src="../images/Example.jpg" alt="An example image with the words 'this is an example'" height="500">
     <h2>Description</h2>
     <p>WRITE A DESCRIPTION</p>
