--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css" />
     <title>Home</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
+    <div class="header">
+        <h1>Odin Recipes</h1>
+    </div>
+    <div id="1">
+       <ul>
         <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
         <li><a href="./recipes/chicago-style-hotdog.html">Chicago Style Hotdog</a></li>
         <li><a href="./recipes/template.html">Template</a></li>
-    </ul>
+       </ul> 
+    </div>
 </body>
 </html>
