--- a/recipes/chicago-style-hotdog.html
+++ b/recipes/chicago-style-hotdog.html
@@ -1,45 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles.css" />
-    <title>Chicago Style Hot Dog</title>
+    <title>Recipe Title</title>
 </head>
+
 <body>
-    <ul>
-        <li><a href="../index.html">Home</a></li>
-    </ul>
-    <h1>Spaghetti</h1>
-    <img src="../images/chicago-hotdog.jpg" alt="A Chicago style hot dog." height="500">
-    <h2>Description</h2>
-    <p>This hot dog is a Windy City classic and a big favorite with sports fans! The frank must be all-beef, the bun must be poppy seed, and the ingredients must be piled onto the bun in the order specified. 
-        And whatever you do, don't spoil the splendor of this Chicago dog with ketchup!</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li><p>1 all-beef hot dog</p></li>
-        <li><p>1 poppy seed hot dog bun</p></li>
-        <li><p>1 tablespoon yellow mustard</p></li>
-        <li><p>1 tablespoon sweet green pickle relish</p></li>
-        <li><p>1 tablespoon chopped onion</p></li>
-        <li><p>2 tomato wedges</p></li>
-        <li><p>1 dill pickle spear</p></li>
-        <li><p></p>2 sport peppers</li>
-        <li><p>1 dash celery salt</p></li>
-        
-        
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li><p>Bring a pot of water to a boil over high heat. 
-            Reduce heat to low, place hot dog in water, and cook until warmed through, about 5 minutes. 
-            Remove hot dog from water and set aside.</p></li>
-        <li><p>Place a steamer basket into the pot and steam poppy seed bun until warm, about 2 minutes.</p></li>
-        <li><p>Place hot dog in steamed bun. 
-            Pile on toppings in this order: mustard, relish, onion, tomato, pickle, peppers, and celery salt. 
-            The tomato wedges should be nestled between hot dog and top of bun on one side. 
-            Place pickle between hot dog and bottom of bun on the other side. 
-            Don't even think about ketchup!</p></li>
-    </ol>
+    <div class="card">
+        <div class="nav">
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="header-card">
+        <div class="header">
+            <h1>Chicago Style Hot Dog</h1>
+            <img src="../images/chicago-hotdog.jpg" alt="A Chicago style hot dog." height="500">
+        </div>
+    </div>
+    <div class="recipe-card">
+        <div id="1">
+            <h2>Description</h2>
+            <p>>This hot dog is a Windy City classic and a big favorite with sports fans! The frank must be all-beef,
+                the bun must be poppy seed, and the ingredients must be piled onto the bun in the order specified.
+                And whatever you do, don't spoil the splendor of this Chicago dog with ketchup!</p>
+        </div>
+        <div id="2">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>
+                    <p>1 all-beef hot dog</p>
+                </li>
+                <li>
+                    <p>1 poppy seed hot dog bun</p>
+                </li>
+                <li>
+                    <p>1 tablespoon yellow mustard</p>
+                </li>
+                <li>
+                    <p>1 tablespoon sweet green pickle relish</p>
+                </li>
+                <li>
+                    <p>1 tablespoon chopped onion</p>
+                </li>
+                <li>
+                    <p>2 tomato wedges</p>
+                </li>
+                <li>
+                    <p>1 dill pickle spear</p>
+                </li>
+                <li>
+                    <p></p>2 sport peppers
+                </li>
+                <li>
+                    <p>1 dash celery salt</p>
+                </li>
+            </ul>
+        </div>
+        <div id="3">
+            <h2>Steps</h2>
+            <ol>
+                <li>
+                    <p>Bring a pot of water to a boil over high heat.
+                        Reduce heat to low, place hot dog in water, and cook until warmed through, about 5 minutes.
+                        Remove hot dog from water and set aside.</p>
+                </li>
+                <li>
+                    <p>Place a steamer basket into the pot and steam poppy seed bun until warm, about 2 minutes.</p>
+                </li>
+                <li>
+                    <p>Place hot dog in steamed bun.
+                        Pile on toppings in this order: mustard, relish, onion, tomato, pickle, peppers, and celery
+                        salt.
+                        The tomato wedges should be nestled between hot dog and top of bun on one side.
+                        Place pickle between hot dog and bottom of bun on the other side.
+                        Don't even think about ketchup!</p>
+                </li>
+            </ol>
+        </div>
+    </div>
+
 </body>
+
 </html>
